[package]
name = "cro-nodelib"
version = "0.1.0"
edition = "2018"
authors = ["Calvin Lau <calvin@crypto.com>"]
license = "Apache-2.0"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[features]
mock = []

[lib]
name = "cro_nodelib"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.3.3"
hex = "0.4.0"
parity-scale-codec = { features = ["derive"], version = "1.1" }
secstr = { version = "0.4.0", features = ["serde"] }
chain-core = { git = "https://github.com/crypto-com/chain", branch = "master" }
client-common = { git = "https://github.com/crypto-com/chain", branch = "master", features = ["default", "http-rpc", "websocket-rpc"] }
client-core = { git = "https://github.com/crypto-com/chain", branch = "master" }
