[package]
name = "chain-nodelib"
version = "0.2.0"
edition = "2018"
authors = ["Calvin Lau <calvin@crypto.com>"]
license = "Apache-2.0"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[features]
mock = []

[lib]
name = "cro_nodelib"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
gcd = "2.0.0"
neon = "0.4.0"
hex = "0.4.2"
parity-scale-codec = { features = ["derive"], version = "1.3" }
secstr = { version = "0.4.0", features = ["serde"] }
lazy_static = "1.4.0"
secp256k1zkp = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", rev = "f8759809f6e3fed793b37166f7cd91c57cdb2eab", features = ["serde", "zeroize", "rand", "recovery", "endomorphism", "musig"] }
serde_json = "1.0.55"
chain-core = { git = "https://github.com/crypto-com/chain", branch = "release/v0.5" }
client-common = { git = "https://github.com/crypto-com/chain", branch = "release/v0.5", features = ["default", "websocket-rpc"] }
client-core = { git = "https://github.com/crypto-com/chain", branch = "release/v0.5" }
chain-tx-validation = { git = "https://github.com/crypto-com/chain", branch = "release/v0.5" }